package com.jacob;

/**
 * Created by LIUJA8 on 1/20/2016.
 */
public class BigTrouser extends Finery {
  @Override
  public String weared(String Dressed) {
    return Dressed += "BigTrouser ";
  }
}
