package com.jacob;

/**
 * Created by LIUJA8 on 1/20/2016.
 */
public abstract class Finery {
  public abstract String weared(String Dressed);
}
